common/force-app/main/default/objects/Referral_Application__c/Referral_Application__c.object-meta.xml
<CustomObject>
    <label>Referral Agreement</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Referral Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>