common/force-app/main/default/objects/Referral_Application__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Agreements</relationshipLabel>
    <relationshipName>Referral_Apps_Object</relationshipName>
    <type>Lookup</type>
</CustomField>