common/force-app/main/default/objects/Referral_Application__c/fields/Date_Validated_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Validated_Approved__c</fullName>
    <label>Date Validated/Approved</label>
    <type>Date</type>
</CustomField>