common/force-app/main/default/objects/Referral_Application__c/fields/First_Investment_Commission__c.field-meta.xml
<CustomField>
    <fullName>First_Investment_Commission__c</fullName>
    <inlineHelpText>Please enter the % including GST.</inlineHelpText>
    <label>First Investment Commission</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>