common/force-app/main/default/objects/Referral_Application__c/fields/Not_currently_ref__c.field-meta.xml
<CustomField>
    <fullName>Not_currently_ref__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Currently Referring</label>
    <type>Checkbox</type>
</CustomField>