common/force-app/main/default/objects/Referral_Application__c/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Referral_Apps_Object</relationshipName>
    <type>Lookup</type>
</CustomField>