common/force-app/main/default/objects/Referral_Application__c/fields/Subsequent_Investment_Commission__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Investment_Commission__c</fullName>
    <inlineHelpText>Please include the subsequent % including GST.</inlineHelpText>
    <label>Subsequent Investment Commission</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>